Changelog
=========

1.0.3 - unreleased
------------------

- Use zope.browserpage.
  [hannosch]

1.0.2 - 2011-10-18
------------------

- Generate UUID without dashes.
  [elro]

1.0.1 - 2011-05-20
------------------

- Relicense under modified BSD license.
  See http://plone.org/foundation/materials/foundation-resolutions/plone-framework-components-relicensing-policy
  [davisagli]

1.0 - 2011-05-13
----------------

- Release 1.0 Final
  [esteele]
  
- Add MANIFEST.in.
  [WouterVH]


1.0b2 - 2011-01-03
------------------

- Add MutableUUID component
  [toutpt]


1.0b1 - 2010-11-27
------------------

- Initial release